src/app/shared/header/header.component.scss
@import 'src/assets/scss/variables';

mz-navbar-item  a {
  color: $white!important;
}

.pinata-logo-side-menu {
    cursor: pointer;
    outline: none;
}

.logo {
  display: flex;
  max-height:46px;
  margin: 6px 0;
  transition: max-height 300ms linear;
}

.avatar {
  width: 30px;
  height: 30px;
  border-radius: 50%;
}

.waves-effect {
  transition:unset;
}

.toogle_menu {
  display: none;
}

@media all and (max-width: $app_especific_toggle_menu) {
  mz-navbar-item-container {
    display: none;
  }
  .toogle_menu {
    display: block!important;
    margin-top: 10px;
    padding: 0;
    color:white;
  }
  .toogle_menu i {
    line-height: inherit;
  }
}
.active {
  background-color: rgba(0,0,0,0.08);
}
:host /deep/ nav {
  transition: all 300ms linear;
}
.scrolled {
  /deep/ nav{
    background: rgba(0, 0, 0, 0.6);
    // background: rgba(211, 47, 47,0.9);
    height: 44px;
    line-height: 44px;
  }
  .logo {
    max-height: 32px;
  }
  .toogle_menu {
    margin-top: 0;
  }
}

